--- a/html/index.1
+++ b/html/index.1
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Toca do Coelho</title>
+</head>
+<body>
+    <header>
+            <div>
+                <img>
+                <h1>Toca do Coelho</h1>
+                <h5>Escola Infantil</h5>
+                <button>sobre nós</button>
+                <button>Atividade extras</button>
+                <button>Historía</button>
+                <button>matrículas</button>
+                <img>
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+    </header>
+    <div>       
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+    </div>
+    <div>
+        <h2>Sobre nós</h2>
+            <img>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac justo ut nisi aliquet consectetur. Quisque at lectus vitae eros blandit vestibulum. Mauris tristique sapien sit amet nunc convallis, nec convallis eros bibendum. Integer posuere felis eu nibh efficitur, at tincidunt est elementum.
+            </p>
+            <img>
+    </div>
+    <div>
+        <h2>Manchetes de destaques</h2>
+        <img>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <IMG>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+    </div>
+    <footer>
+        <img>
+        <p>endereço da localização
 
+            e link
+            
+        </p>
+        <h2></h2>
+        <img>
+        <p>61 9 9999-9999</p>
+        <img>
+        <p>@tocadocoelho</p>
+
+    </footer>
+</body>
+</html>
