--- a/html/index.1
+++ b/html/index.1
@@ -3,56 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <title>Toca do Coelho</title>
 </head>
 <body>
     <header>
-            <div>
-                <img>
-                <h1>Toca do Coelho</h1>
-                <h5>Escola Infantil</h5>
-                <button>sobre nós</button>
-                <button>Atividade extras</button>
-                <button>Historía</button>
-                <button>matrículas</button>
-                <img>
-                <img src="" alt="">
-                <img src="" alt="">
-            </div>
+        <div class="logo">
+            <img src="img/coelho.jpg" class="coelho">
+        </div>
+        <div class="titulo">
+            <h1>Toca do Coelho</h1>
+            <span>Escola Infantil</span>
+        </div>
+        <nav>
+            <ul>
+                <l1><a href="#">Sobre nós</a></l1>
+                <l1><a href="#">Matrículas</a></l1>
+                <l1><a href="#">Atividades extras</a></l1>
+                <l1><a href="#">História</a></l1>
+            </ul>
+        </nav>
+        <div class="social-icons">
+            <a href="#"><img src="img/zap.png" alt="WhatsApp"></a>
+            <a href="#"><img src="img/insta.png" alt="Instagram"></a>
+            <a href="#"><img src="img/loc.png" alt="Contato"></a>
+        </div>
     </header>
-    <div>       
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-    </div>
-    <div>
+    <section class="img">
+        <div class="imgG">       
+            <img src="img/escola.jpg" class="escola">
+        </div>
+        <div class="imgP">
+            <img src="img/patio.jpg" class="patio">
+        </div>
+        <div class="imgp">
+            <img src="img/fachada.jpg" class="fachada">
+        </div>
+        <div>
+    </section>
         <h2>Sobre nós</h2>
-            <img>
+            <img src="img/cadeirante.png" alt="cadeirante">
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac justo ut nisi aliquet consectetur. Quisque at lectus vitae eros blandit vestibulum. Mauris tristique sapien sit amet nunc convallis, nec convallis eros bibendum. Integer posuere felis eu nibh efficitur, at tincidunt est elementum.
             </p>
-            <img>
+            <img src="img/assistente.jpg" alt="assistente">
     </div>
     <div>
         <h2>Manchetes de destaques</h2>
-        <img>
+        <img src="img/jornal1.jpg" alt="jornal1">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <IMG>
+        <img src="img/jornal2.jpg" alt="jornal2">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
     </div>
     <footer>
-        <img>
+        <img src="img/loc.png" alt="loc2">
         <p>endereço da localização
 
             e link
             
         </p>
         <h2></h2>
-        <img>
+        <img src="img/zap.png" alt="zap2">
         <p>61 9 9999-9999</p>
-        <img>
+        <img src="img/insta.png" alt="insta2">
         <p>@tocadocoelho</p>
 
     </footer>
