--- a/html/index.1
+++ b/html/index.1
@@ -17,16 +17,16 @@
         </div>
         <nav>
             <ul>
-                <l1><a href="#">Sobre nós</a></l1>
+                <l1 class="link"><a href="#Sobre nós">Sobre nós</a></l1>
                 <l1><a href="#">Matrículas</a></l1>
-                <l1><a href="#">Atividades extras</a></l1>
-                <l1><a href="#">História</a></l1>
+                <l1><a href="index.3.html">Atividades extras</a></l1>
+                <l1><a href="index.4.html">História</a></l1>
             </ul>
         </nav>
         <div class="social-icons">
             <a href="#"><img src="img/zap.png" alt="WhatsApp"></a>
             <a href="#"><img src="img/insta.png" alt="Instagram"></a>
-            <a href="#"><img src="img/loc.png" alt="Contato"></a>
+            <a href="https://www.google.com.br/maps/place/Papuda+-+S%C3%A3o+Sebasti%C3%A3o,+Bras%C3%ADlia+-+DF/@-15.9048388,-47.8171362,15z/data=!3m1!4b1!4m6!3m5!1s0x935a21d4f88603d5:0x5751b3bbc52f0802!8m2!3d-15.9048599!4d-47.8068364!16s%2Fg%2F1ymt6s2wf?entry=ttu&g_ep=EgoyMDI0MTAxNC4wIKXMDSoASAFQAw%3D%3D"><img src="img/loc.png" alt="Contato"></a>
         </div>
     </header>
     <section class="img">
@@ -41,35 +41,44 @@
         </div>
         <div>
     </section>
-        <h2>Sobre nós</h2>
-            <img src="img/cadeirante.png" alt="cadeirante">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac justo ut nisi aliquet consectetur. Quisque at lectus vitae eros blandit vestibulum. Mauris tristique sapien sit amet nunc convallis, nec convallis eros bibendum. Integer posuere felis eu nibh efficitur, at tincidunt est elementum.
-            </p>
-            <img src="img/assistente.jpg" alt="assistente">
+    <div class="acess">
+        <h2 id="Sobre nós">Sobre nós</h2>
+        <img src="img/cadeirante.png" class="cadeirante">
     </div>
-    <div>
-        <h2>Manchetes de destaques</h2>
-        <img src="img/jornal1.jpg" alt="jornal1">
+    <div class="aceço">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac justo ut nisi aliquet consectetur. Quisque at lectus vitae eros blandit vestibulum. Mauris tristique sapien sit amet nunc convallis, nec convallis eros bibendum. Integer posuere felis eu nibh efficitur, at tincidunt est elementum.
+        </p>
+        <img src="img/assistente.jpg" class="assistente">
+    </div>
+    <h2 class="manchete">Manchetes de destaques</h2>
+    <div class="jornal">
+        <img src="img/jornal1.jpg" class="jornal1">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        <img src="img/jornal2.jpg" alt="jornal2">
+    </div>
+    <div class="jornal3">
+        <img src="img/jornal2.jpg" class="jornal2">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
     </div>
     <footer>
-        <img src="img/loc.png" alt="loc2">
-        <p>endereço da localização
+        <div class="localização">
+            <img src="img/loc.png" class="loc2">
+            <p>endereço da localização
 
-            e link
-            
-        </p>
-        <h2></h2>
-        <img src="img/zap.png" alt="zap2">
-        <p>61 9 9999-9999</p>
-        <img src="img/insta.png" alt="insta2">
-        <p>@tocadocoelho</p>
-
+                e link
+                
+            </p>
+        </div>
+        <div class="contato">
+            <p>61 9 9999-9999</p>
+            <img src="img/zap.png" alt="zap2">
+        </div>
+        <div>
+            <img src="img/insta.png" alt="insta2">
+            <p>@tocadocoelho</p>
+        </div>
     </footer>
 </body>
 </html>
