--- a/html/index.1
+++ b/html/index.1
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="style1.css"/>
     <title>Toca do Coelho</title>
 </head>
 <body>
@@ -13,72 +13,88 @@
         </div>
         <div class="titulo">
             <h1>Toca do Coelho</h1>
-            <span>Escola Infantil</span>
+            <h3>Escola Infantil</h3>
+        </div>
         </div>
         <nav>
-            <ul>
-                <l1 class="link"><a href="#Sobre nós">Sobre nós</a></l1>
-                <l1><a href="#">Matrículas</a></l1>
-                <l1><a href="index.3.html">Atividades extras</a></l1>
-                <l1><a href="index.4.html">História</a></l1>
-            </ul>
+            <a href="#">Sobre nós</a>
+            <a href="#">Matrículas</a>
+            <a href="#">Atividades Extras</a>
+            <a href="#">História</a>
         </nav>
         <div class="social-icons">
-            <a href="#"><img src="img/zap.png" alt="WhatsApp"></a>
-            <a href="#"><img src="img/insta.png" alt="Instagram"></a>
-            <a href="https://www.google.com.br/maps/place/Papuda+-+S%C3%A3o+Sebasti%C3%A3o,+Bras%C3%ADlia+-+DF/@-15.9048388,-47.8171362,15z/data=!3m1!4b1!4m6!3m5!1s0x935a21d4f88603d5:0x5751b3bbc52f0802!8m2!3d-15.9048599!4d-47.8068364!16s%2Fg%2F1ymt6s2wf?entry=ttu&g_ep=EgoyMDI0MTAxNC4wIKXMDSoASAFQAw%3D%3D"><img src="img/loc.png" alt="Contato"></a>
+            <a href="#"><img src="img/whatsapp-symbol-logo-svgrepo-com.svg" alt="WhatsApp"></a>
+            <a href="#"><img src="img/instagram-2-1-logo-svgrepo-com.svg" alt="Instagram"></a>
+            <a href="#"><img src="img/icons8-google-maps-novo.svg" alt="Contato"></a>
         </div>
     </header>
-    <section class="img">
-        <div class="imgG">       
-            <img src="img/escola.jpg" class="escola">
-        </div>
-        <div class="imgP">
-            <img src="img/patio.jpg" class="patio">
-        </div>
-        <div class="imgp">
-            <img src="img/fachada.jpg" class="fachada">
-        </div>
-        <div>
-    </section>
-    <div class="acess">
-        <h2 id="Sobre nós">Sobre nós</h2>
-        <img src="img/cadeirante.png" class="cadeirante">
-    </div>
-    <div class="aceço">
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac justo ut nisi aliquet consectetur. Quisque at lectus vitae eros blandit vestibulum. Mauris tristique sapien sit amet nunc convallis, nec convallis eros bibendum. Integer posuere felis eu nibh efficitur, at tincidunt est elementum.
-        </p>
-        <img src="img/assistente.jpg" class="assistente">
-    </div>
-    <h2 class="manchete">Manchetes de destaques</h2>
-    <div class="jornal">
-        <img src="img/jornal1.jpg" class="jornal1">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-    </div>
-    <div class="jornal3">
-        <img src="img/jornal2.jpg" class="jornal2">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-    </div>
-    <footer>
-        <div class="localização">
-            <img src="img/loc.png" class="loc2">
-            <p>endereço da localização
+    <section class="img">   
 
-                e link
+        <div class="imgFachada">
+            <img src="img/fachada.jpg" alt="Fachada">
+        </div>  
+
+        <div class="imgPatioEscola">
+            <div class="imgPatio">
+                <img src="img/patio.jpg" alt="Pátio">
+            </div>
+            <div class="imgEscola">
+                <img src="img/escola.jpg" alt="Escola">
+            </div>
+        </div>
+    </section>
+        
+    <div class="sobreNos">
+        <h2>Sobre nós</h2>  
+        <div class="sobreNosContent"> 
+            <h3>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac justo ut nisi aliquet consectetur. Quisque at lectus vitae eros blandit vestibulum. Mauris tristique sapien sit amet nunc convallis, nec convallis eros bibendum. Integer posuere felis eu nibh efficitur, at tincidunt est elementum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac justo ut nisi aliquet consectetur. Quisque at lectus vitae eros blandit vestibulum. Mauris tristique sapien sit amet nunc convallis, nec convallis eros bibendum. Integer posuere felis eu nibh efficitur, at tincidunt est elementum.
                 
-            </p>
+            </h3>    
+            <img src="img/assistente.jpg" alt="assistente">
         </div>
-        <div class="contato">
-            <p>61 9 9999-9999</p>
-            <img src="img/zap.png" alt="zap2">
+    </div>
+    
+    
+    <div class="jornal">
+
+        <h2 class="manchete">Manchetes de destaques</h2>
+    
+        <div class="jornal-item">
+
+            <img src="img/jornal1.jpg" alt="jornal1">
+
+            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
         </div>
-        <div>
-            <img src="img/insta.png" alt="insta2">
-            <p>@tocadocoelho</p>
+    
+        <div class="jornal-item">
+
+            <img src="img/jornal2.jpg" alt="jornal2">
+
+            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <div class="location">
+            <a href="https://www.google.com/maps?q=St.+de+Grandes+Áreas+Norte+SHCGN+707+-+Asa+Norte,+Brasília+-+DF,+70297-400" target="_blank" rel="noopener noreferrer">
+                <img src="img/icons8-google-maps-novo.svg" alt="loc2">
+                <p>St. de Grandes Áreas Norte SHCGN 707 - Asa Norte, Brasília - DF, 70297-400</p>
+            </a>
+        </div>
+    
+        <div class="zapFooter">
+            <a href="https://whatsapp.com" target="_blank" rel="noopener noreferrer">
+                <img src="img/whatsapp-symbol-logo-svgrepo-com.svg" alt="zap2">
+                <p>61 9 9999-9999</p>
+            </a>
+        </div>
+    
+        <div class="instaFooter">       
+            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                <img src="img/instagram-2-1-logo-svgrepo-com.svg" alt="insta2">
+                <p>@tocadocoelho</p>
+            </a>
         </div>
     </footer>
-</body>
-</html>
+    
