--- a/html/index.1
+++ b/html/index.1
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style1.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <title>Toca do Coelho</title>
 </head>
 <body>
@@ -15,17 +15,16 @@
             <h1>Toca do Coelho</h1>
             <h3>Escola Infantil</h3>
         </div>
-        </div>
         <nav>
-            <a href="#">Sobre nós</a>
-            <a href="#">Matrículas</a>
-            <a href="#">Atividades Extras</a>
-            <a href="#">História</a>
+            <a href="#Sobre nós">Sobre nós</a>
+            <a href="index.2.html">Matrículas</a>
+            <a href="index.3.html">Atividades Extras</a>
+            <a href="index.4.html">História</a>
         </nav>
         <div class="social-icons">
-            <a href="#"><img src="img/whatsapp-symbol-logo-svgrepo-com.svg" alt="WhatsApp"></a>
-            <a href="#"><img src="img/instagram-2-1-logo-svgrepo-com.svg" alt="Instagram"></a>
-            <a href="#"><img src="img/icons8-google-maps-novo.svg" alt="Contato"></a>
+            <a href="https://whatsapp.com"><img src="img/whatsapp-symbol-logo-svgrepo-com.svg" alt="WhatsApp"></a>
+            <a href="https://www.instagram.com"><img src="img/instagram-2-1-logo-svgrepo-com.svg" alt="Instagram"></a>
+            <a href="https://www.google.com/maps?q=St.+de+Grandes+Áreas+Norte+SHCGN+707+-+Asa+Norte,+Brasília+-+DF,+70297-400"><img src="img/icons8-google-maps-novo.svg" alt="Contato"></a>
         </div>
     </header>
     <section class="img">   
@@ -45,11 +44,14 @@
     </section>
         
     <div class="sobreNos">
-        <h2>Sobre nós</h2>  
+        <h2 id="Sobre nós">Sobre nós</h2>  
         <div class="sobreNosContent"> 
             <h3>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac justo ut nisi aliquet consectetur. Quisque at lectus vitae eros blandit vestibulum. Mauris tristique sapien sit amet nunc convallis, nec convallis eros bibendum. Integer posuere felis eu nibh efficitur, at tincidunt est elementum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac justo ut nisi aliquet consectetur. Quisque at lectus vitae eros blandit vestibulum. Mauris tristique sapien sit amet nunc convallis, nec convallis eros bibendum. Integer posuere felis eu nibh efficitur, at tincidunt est elementum.
+                Na Toca do Coelho, nossa missão é proporcionar um ambiente acolhedor e estimulante para o desenvolvimento integral das crianças. Com mais de [XX] anos de história, somos uma instituição de referência no cuidado e na educação infantil, oferecendo um espaço onde os pequenos podem aprender, crescer e brincar com segurança.
+
+                Ao longo de nossa trajetória, nos destacamos pela excelência no ensino e pela dedicação da nossa equipe de profissionais altamente qualificados. Nosso compromisso é com a formação de crianças curiosas, criativas e preparadas para o futuro, sempre respeitando os valores da infância e promovendo o desenvolvimento cognitivo, emocional e social.
                 
+                Somos reconhecidos por nossa abordagem inovadora e por criar um ambiente familiar que fortalece a confiança entre escola e família, formando uma verdadeira parceria para o bem-estar e o crescimento dos nossos alunos. A Toca do Coelho é um lugar onde as crianças aprendem com alegria, em um ambiente que incentiva a descoberta, a autonomia e a construção de amizades.                
             </h3>    
             <img src="img/assistente.jpg" alt="assistente">
         </div>
@@ -64,14 +66,20 @@
 
             <img src="img/jornal1.jpg" alt="jornal1">
 
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+            <h3>"A escola infantil Toca do Coelho se consolida como referência no setor ao adotar práticas inovadoras que garantem plena acessibilidade para todas as crianças. Com uma infraestrutura adaptada e projetos pedagógicos inclusivos, a instituição se destaca pela criação de um ambiente seguro e acolhedor, onde cada aluno, independentemente de suas necessidades, tem a oportunidade de aprender e se desenvolver com autonomia e igualdade."</h3>
         </div>
     
         <div class="jornal-item">
 
             <img src="img/jornal2.jpg" alt="jornal2">
 
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h3>
+            <h3>"A escola infantil Toca do Coelho tem se destacado no cenário educacional por sua abordagem inovadora, voltada para a inclusão e o desenvolvimento integral das crianças. Com décadas de experiência, a instituição se tornou referência em acessibilidade e ensino personalizado, sempre comprometida com a formação de um ambiente acolhedor e adaptado para todos os seus alunos.
+
+                Um dos principais diferenciais da Toca do Coelho é sua infraestrutura, pensada para garantir total acessibilidade a crianças com diferentes necessidades. Rampas, elevadores e espaços adaptados fazem parte de uma estrutura que permite que todos os alunos se movimentem com segurança e autonomia. No entanto, a excelência da escola vai além do espaço físico. A equipe pedagógica é composta por profissionais altamente capacitados, incluindo professores especializados, psicólogos e terapeutas, que trabalham em conjunto para criar um ambiente de ensino inclusivo e personalizado.
+                
+                Cada criança é vista como um indivíduo único, com seu próprio ritmo de aprendizado. Por isso, a escola adota uma abordagem que respeita essas diferenças, garantindo que todas as crianças, independentemente de suas necessidades, recebam a atenção e o suporte adequados para desenvolverem suas habilidades ao máximo.
+                
+                Além disso, a Toca do Coelho valoriza o envolvimento da família no processo educativo, promovendo uma verdadeira parceria entre pais e escola."</h3>
         </div>
     </div>
 
@@ -97,4 +105,5 @@
             </a>
         </div>
     </footer>
-    
+</body>
+</html>
