--- a/html/index.2
+++ b/html/index.2
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -5,29 +6,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toca do Coelho</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="css/style2.css">
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <img src="coelho.jpg" class="coelho">
+            <img src="img/coelho.jpg" class="coelho">
         </div>
         <div class="titulo">
             <h1>Toca do Coelho</h1>
             <h3>Escola Infantil</h3>
         </div>
-        </div>
         <nav>
-            <a href="#">Sobre nós</a>
-            <a href="#">Matrículas</a>
-            <a href="#">Atividades Extras</a>
-            <a href="#">História</a>
+            <a href="index.1.html">Home</a>
+            <a href="index.3.html">Atividades Extras</a>
+            <a href="index.4.html">História</a>
         </nav>
         <div class="social-icons">
-            <a href="#"><img src="whatsapp-symbol-logo-svgrepo-com.svg" alt="WhatsApp"></a>
-            <a href="#"><img src="instagram-2-1-logo-svgrepo-com.svg" alt="Instagram"></a>
-            <a href="#"><img src="icons8-google-maps-novo.svg" alt="Contato"></a>
+            <a href="https://whatsapp.com"><img src="img/whatsapp-symbol-logo-svgrepo-com.svg" alt="WhatsApp"></a>
+            <a href="https://www.instagram.com"><img src="img/instagram-2-1-logo-svgrepo-com.svg" alt="Instagram"></a>
+            <a href="https://www.google.com/maps?q=St.+de+Grandes+Áreas+Norte+SHCGN+707+-+Asa+Norte,+Brasília+-+DF,+70297-400"><img src="img/icons8-google-maps-novo.svg" alt="Contato"></a>
         </div>
     </header>
 
@@ -37,20 +36,20 @@
                 <h2>Matrículas</h2>
             </div>
             <div class="Cre">
-                <h3 style="color: white;">Creche</h3>
-                <p style=" width: 140px;">• de 3 meses a 4 anos completos</p>
+                <h3 style="color: white; font-size: 30px;">Creche</h3>
+                <p >° de 3 meses a 4 anos completos</p>
             </div>
             <div class="Pre">
-                <h3 style="color: white;">Pré-escolar</h3>
-                <p style=" width: 140px;">• de 4 anos a 6 anos completos </p>
+                <h3 style="color: #ffffff; font-size: 30px;">Pré-escolar</h3>
+                <p >° de 4 anos a 6 anos completos </p>
             </div>
         </div>
         
         <div style="display: flex;">
             <div class="Quadrado">
-                <h1 style="margin-bottom: 15px;">Entre em contato</h1>
-                <div style="display: flex;margin-bottom: 20px">
-                    <img src="whatsapp-symbol-logo-svgrepo-com.svg" alt="WhatsApp" width="15px">
+                <h1 style="margin-bottom: 10px;">Entre em contato</h1>
+                <div style="display: flex;margin-bottom: 10px">
+                    <img src="zap.png" alt="">
                     <p style="width: 250px;">61 9 9999-9999</p>
                 </div>
                 <p>Para horarios customizados, consulte a secretaria</p>
@@ -59,38 +58,43 @@
                 <h3>Horários</h3>
                 <div class="linhaVerde">
                     <p class="C">Creche</p>
-                    <p class="Hr">7:00hr as 12:00hr</p>
-                    <p class="Din">R$500,00/mês</p>
+                    <p class="Hr">7:00hr até 12:00hr</p>
+                    <p class="Din">500,00R$/mês</p>
                 </div>
                 <div class="linhaTransparente">
                     <p class="C">Creche</p>
-                    <p class="Hr">7:00hr as 18:00hr</p>
-                    <p class="Din">R$1.200,00/mês</p>
+                    <p class="Hr">7:00hr até 18:00hr</p>
+                    <p class="Din">1.200,00R$/mês</p>
                 </div>
                 <div class="linhaVerde">
-                    <p class="C">Pré-Escolar</p>
-                    <p class="Hr">7:00hr as 12:00hr</p>
-                    <p class="Din">R$800,00/mês</p>
+                    <p class="C">Escolar</p>
+                    <p class="Hr">7:00hr até 12:00hr</p>
+                    <p class="Din">800,00R$/mês</p>
                 </div>
                 <div class="linhaTransparente">
-                    <p class="C">Pré-Escolar</p>
-                    <p class="Hr">7:00hr as 18:00hr</p>
-                    <p class="Din">R$1.500,00/mês</p>
+                    <p class="C">Escolar</p>
+                    <p class="Hr">7:00hr até 18:00hr</p>
+                    <p class="Din">1.500,00R$/mês</p>
                 </div>
                 <div class="linhaVerde">
                     <p class="C">Natação</p>
-                    <p class="Hr">Seg. e Qua. 9:00hr a 16:00hr</p>
-                    <p class="Din">R$200,00/mês</p>
+                    <p class="Hr">seg. e qua. 9:00hr a 16:00hr</p>
+                    <p class="Din">200,00R$/mês</p>
                 </div>
                 <div class="linhaTransparente">
-                    <p class="C">Música</p>
-                    <p class="Hr">Ter. e Qui. 9:00hr a 16:00hr</p>
-                    <p class="Din">R$200,00/mês</p>
+                    <p class="C">Luta</p>
+                    <p class="Hr">ter. e qui. 9:00hr a 16:00hr</p>
+                    <p class="Din">200,00R$/mês</p>
                 </div>
                 <div class="linhaVerde">
                     <p class="C">Dança</p>
-                    <p class="Hr">Sexta 10:00hr a 12:00hr</p>
-                    <p class="Din">R$150,00/mês</p>
+                    <p class="Hr">Sex. 10:00hr a 12:00hr</p>
+                    <p class="Din">150,00R$/mês</p>
+                </div>
+                <div class="vazia">
+                    <p class="C"></p>
+                    <p class="Hr">!Varoles de passeios não inclusos!</p>
+                    <p class="Din"></p>
                 </div>
             </div>
         </div>
@@ -100,26 +104,24 @@
     <footer class="footer">
         <div class="location">
             <a href="https://www.google.com/maps?q=St.+de+Grandes+Áreas+Norte+SHCGN+707+-+Asa+Norte,+Brasília+-+DF,+70297-400" target="_blank" rel="noopener noreferrer">
-                <img src="icons8-google-maps-novo.svg" alt="loc2">
+                <img src="img/icons8-google-maps-novo.svg" alt="loc2">
                 <p>St. de Grandes Áreas Norte SHCGN 707 - Asa Norte, Brasília - DF, 70297-400</p>
             </a>
         </div>
     
         <div class="zapFooter">
             <a href="https://whatsapp.com" target="_blank" rel="noopener noreferrer">
-                <img src="whatsapp-symbol-logo-svgrepo-com.svg" alt="zap2">
+                <img src="img/whatsapp-symbol-logo-svgrepo-com.svg" alt="zap2">
                 <p>61 9 9999-9999</p>
             </a>
         </div>
     
         <div class="instaFooter">       
             <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
-                <img src="instagram-2-1-logo-svgrepo-com.svg" alt="insta2">
+                <img src="img/instagram-2-1-logo-svgrepo-com.svg" alt="insta2">
                 <p>@tocadocoelho</p>
             </a>
         </div>
     </footer>
-
 </body>
-
 </html>
