--- a/html/index.4
+++ b/html/index.4
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style4.css">
-    <title>Document</title>
+    <title>Toca do Coelho</title>
 </head>
 <body>
     <header>
@@ -13,51 +13,75 @@
         </div>
         <div class="titulo">
             <h1>Toca do Coelho</h1>
-            <span>Escola Infantil</span>
+            <h3>Escola Infantil</h3>
         </div>
         <nav>
-            <ul>
-                <l1><a href="index.1.html">Home</a></l1>
-                <l1><a href="#">Matrículas</a></l1>
-                <l1><a href="index.2.html">Atividades extras</a></l1>
-            </ul>
+            <a href="index.1.html">Home</a>
+            <a href="index.2.html">Matrículas</a>
+            <a href="index.3.html">Atividades Extras</a>
         </nav>
         <div class="social-icons">
-            <a href="#"><img src="img/zap.png" alt="WhatsApp"></a>
-            <a href="#"><img src="img/insta.png" alt="Instagram"></a>
-            <a href="#"><img src="img/loc.png" alt="Contato"></a>
+            <a href="https://whatsapp.com"><img src="img/whatsapp-symbol-logo-svgrepo-com.svg" alt="WhatsApp"></a>
+            <a href="https://www.instagram.com"><img src="img/instagram-2-1-logo-svgrepo-com.svg" alt="Instagram"></a>
+            <a href="https://www.google.com/maps?q=St.+de+Grandes+Áreas+Norte+SHCGN+707+-+Asa+Norte,+Brasília+-+DF,+70297-400"><img src="img/icons8-google-maps-novo.svg" alt="Contato"></a>
         </div>
     </header>
-    <h2>História</h2>
+
+    <h2 class="historia">História</h2>
     <div class="um">
-        <img src="img/branco.jpg" class="branco">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <img src="img/hist.jpeg" class="branco">
+        <p>Na escola infantil Toca do Coelho, a tradição católica sempre foi parte fundamental da sua história, transmitida de geração em geração com o mesmo carinho e respeito desde a sua fundação. A escola nasceu do sonho de uma família católica, há mais de [XX] anos, que acreditava que a fé deveria ser cultivada desde a infância, junto com o ensino escolar. Desde o princípio, o objetivo foi criar um espaço onde os valores cristãos pudessem ser vividos diariamente, tanto dentro quanto fora da sala de aula.
+
+            Os fundadores da Toca do Coelho eram pessoas profundamente comprometidas com a fé católica e queriam que as crianças tivessem a oportunidade de crescer em um ambiente que refletisse esses princípios. Com o passar do tempo, seus filhos, e mais tarde seus netos, assumiram a direção da escola, mantendo viva essa essência e adaptando-a aos novos tempos, mas sem nunca perder de vista as raízes religiosas que sempre guiaram a instituição.
+            
+            Uma das marcas mais bonitas dessa tradição são as celebrações religiosas que acontecem ao longo do ano letivo. Datas importantes do calendário cristão, como o Natal, a Páscoa e o Dia de Todos os Santos, são comemoradas com atividades que envolvem não apenas as crianças, mas também suas famílias. Essas festividades são momentos de união, em que a comunidade escolar se reúne para celebrar a fé, reforçar os ensinamentos cristãos e praticar a solidariedade.
+            
+            A Toca do Coelho sempre manteve um forte compromisso com a formação espiritual de seus alunos, respeitando a liberdade de crença de cada família, mas oferecendo às crianças a oportunidade de aprender e viver valores como o respeito, a empatia e o amor ao próximo. O ensino religioso é conduzido de forma carinhosa e inclusiva, apresentando os fundamentos da fé católica por meio de histórias bíblicas, orações e projetos que ensinam as crianças sobre o cuidado com o outro e o mundo.
+            
+            Essa tradição católica, passada de geração em geração, se reflete também na convivência diária da escola. Os professores, muitos dos quais já fazem parte da comunidade escolar há décadas, carregam consigo a missão de transmitir esses valores às novas gerações. Alguns educadores, que começaram na escola como alunos, hoje retornam como professores, perpetuando a mesma fé e os mesmos ensinamentos que receberam quando crianças.
+            
+            A continuidade dessa tradição é visível nos ex-alunos que, ao crescerem, trazem seus filhos para a escola. Eles, que foram educados na Toca do Coelho, desejam que seus filhos também cresçam em um ambiente que valorize a fé e os princípios cristãos. Dessa forma, o legado da escola continua a se expandir, criando um círculo de fé e educação que abrange diversas gerações de famílias.
+            
+            Assim, a Toca do Coelho segue firme em sua missão de oferecer não só uma educação de qualidade, mas também um espaço onde a fé católica é parte integrante da formação dos pequenos. Essa tradição, que começou há tantos anos com uma simples ideia, continua viva e forte, sendo cuidadosamente passada de geração em geração, sempre com o mesmo propósito: formar crianças não apenas para o mundo, mas também para a vida espiritual, com base em valores que durarão por toda a vida.
         </p>
     </div>
     <div class="dois">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Na Toca do Coelho, a ligação com a Virgem Maria é uma parte essencial da espiritualidade da escola, refletindo o profundo respeito e carinho que a comunidade escolar tem por sua figura maternal. Desde a fundação da escola, a Virgem Maria tem sido vista como um modelo de fé, amor e cuidado, e sua presença é sentida em diversas práticas e tradições que permeiam o cotidiano da instituição.
+
+            A devoção à Virgem Maria é incorporada nas atividades diárias, começando pelas orações matinais, onde os alunos são incentivados a fazer uma pequena oração pedindo a proteção e a intercessão de Maria. Esse momento de espiritualidade não só inicia o dia com um espírito positivo, mas também ajuda as crianças a desenvolverem um vínculo pessoal com a figura da mãe de Jesus, reconhecendo-a como um exemplo de amor incondicional e compaixão.
+
+            Além das orações, a Toca do Coelho celebra várias festividades dedicadas à Virgem Maria ao longo do ano. Uma das mais especiais é a Festa de Nossa Senhora, que reúne alunos, pais e educadores em um dia de celebrações, que incluem missas, apresentações e atividades lúdicas. Esses eventos são uma oportunidade para a comunidade se unir em oração e gratidão, promovendo um ambiente de harmonia e fé. As crianças aprendem sobre a vida de Maria, seus valores e virtudes, e como esses ensinamentos podem ser aplicados em suas próprias vidas.
+
+            A imagem da Virgem Maria também está presente nas dependências da escola, com estátuas e quadros que decoram os espaços, servindo como um lembrete constante de sua presença amorosa. Essas representações visuais ajudam a criar um ambiente espiritual acolhedor, onde os alunos podem se sentir protegidos e amparados, sabendo que Maria é uma figura que sempre está ao seu lado.
+
+            Outro aspecto importante dessa ligação é a promoção da compaixão e do cuidado ao próximo, características que a Virgem Maria exemplifica. As crianças são incentivadas a praticar atos de bondade e solidariedade, refletindo os ensinamentos de Maria sobre amor ao próximo. Projetos sociais e campanhas de arrecadação de alimentos e roupas são organizados, promovendo a empatia e a responsabilidade social entre os alunos.
+
+            Dessa forma, a ligação da Toca do Coelho com a Virgem Maria vai muito além de uma simples devoção; ela se manifesta em ações concretas e em um ambiente que promove o amor, a solidariedade e a espiritualidade. Através da figura materna de Maria, as crianças aprendem sobre a importância de cultivar a fé e os valores cristãos em suas vidas, formando assim uma base sólida para seu crescimento pessoal e espiritual. Essa conexão profunda com a Virgem Maria é um legado que continua a inspirar e guiar a comunidade da Toca do Coelho a cada dia.
         </p>
-        <img src="img/branco.jpg" class="branco">
+        <img src="img/santo.jpg" class="branco">
     </div>
 
-    <footer>
-        <div class="localização">
-            <img src="img/loc.png" class="loc2">
-            <p>endereço da localização
-
-                e link
-                
-            </p>
+    <footer class="footer">
+        <div class="location">
+            <a href="https://www.google.com/maps?q=St.+de+Grandes+Áreas+Norte+SHCGN+707+-+Asa+Norte,+Brasília+-+DF,+70297-400" target="_blank" rel="noopener noreferrer">
+                <img src="img/icons8-google-maps-novo.svg" alt="loc2">
+                <p>St. de Grandes Áreas Norte SHCGN 707 - Asa Norte, Brasília - DF, 70297-400</p>
+            </a>
         </div>
-        <div class="contato">
-            <p>61 9 9999-9999</p>
-            <img src="img/zap.png" alt="zap2">
+    
+        <div class="zapFooter">
+            <a href="https://whatsapp.com" target="_blank" rel="noopener noreferrer">
+                <img src="img/whatsapp-symbol-logo-svgrepo-com.svg" alt="zap2">
+                <p>61 9 9999-9999</p>
+            </a>
         </div>
-        <div>
-            <img src="img/insta.png" alt="insta2">
-            <p>@tocadocoelho</p>
+    
+        <div class="instaFooter">       
+            <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                <img src="img/instagram-2-1-logo-svgrepo-com.svg" alt="insta2">
+                <p>@tocadocoelho</p>
+            </a>
         </div>
     </footer>
     
